# personalUI

./: .gitignore  COMPLETION_SUMMARY.md  COUNT_ACCUMULATION_ANALYSIS.md  DATABASE_MANAGEMENT_UPDATE.md  DATABASE_PERSISTENCE_SUMMARY.md  FEATURES_SUMMARY.md  SEARCH_ENGINE_INTEGRATION.md  SMART_MERGER_ENHANCEMENT.md  TEST_NEW_FEATURES.md  pyproject.toml
backend/: DATABASE_PERSISTENCE.md  graph_service.py  main.py  test_database_persistence.py  test_logger.py
backend/data/: .gitkeep  graph_database copy.pkl  graph_database.pkl
frontend/src/: App.vue
frontend/src/components/: DatabaseManager.vue
simple_graphrag/: simplegraph.py  test_count_accumulation.py  test_smart_merger_enhanced.py
simple_graphrag/config/prompts/: check_extraction.txt  extract_graph.txt  smart_merge.txt
simple_graphrag/src/combiners/: smart_merger.py
simple_graphrag/src/extractors/: extractor.py
simple_graphrag/src/models/: delta.py  graph.py  relationship.py
simple_graphrag/src/search/: search_engine.py
simple_graphrag/src/utils/: logger.py
